# okapi

./: Cargo.toml
examples/secure_request_guard/src/: cookies.rs
rocket-okapi-codegen/: Cargo.toml
rocket-okapi-codegen/src/openapi_attr/: mod.rs  route_attr.rs
rocket-okapi/src/: gen.rs
rocket-okapi/src/handlers/: redirect.rs
