[workspace]
members = [
    "okapi",
    "rocket-okapi",
    "rocket-okapi-codegen",
    "examples/json-web-api",
    "examples/custom_schema",
    "examples/uuid",
    "examples/special-types",
    "examples/secure_request_guard",
    "examples/streams",
    "examples/dyn_templates",
    "examples/openapi_attributes",
    "examples/raw_identifiers",
]

[patch.crates-io]
rocket = { git = "https://github.com/SergioBenitez/Rocket/", rev = "26a3f00" }
rocket_http = { git = "https://github.com/SergioBenitez/Rocket/", rev = "26a3f00" }
rocket_db_pools = { git = "https://github.com/SergioBenitez/Rocket/", rev = "26a3f00" }
rocket_sync_db_pools = { git = "https://github.com/SergioBenitez/Rocket/", rev = "26a3f00" }
rocket_dyn_templates = { git = "https://github.com/SergioBenitez/Rocket/", rev = "26a3f00" }
